# CPP_Tumor_Classification

./: CMakeLists.txt  README.md
include/: customDataset.hpp  models.py  network.h
src/: customDataset.cpp  main.cpp
